fix: adjust button outline offset
Button outline will be cut off with default offset

--- a/assets/main.css
+++ b/assets/main.css
@@ -80,6 +80,7 @@ select:focus {
   appearance: none;
   border: 0;
   cursor: pointer;
+  outline-offset: -3px;
 
   background: var(--dk-button-color);
   color: #fff;
